--- a/becpg-plm/becpg-plm-share/src/main/assembly/web/components/search/custom-search.css
+++ b/becpg-plm/becpg-plm-share/src/main/assembly/web/components/search/custom-search.css
@@ -152,3 +152,7 @@ div.selected-items, div.item-select {
     padding-left: 5px;
 }
 
+.search .share-form .form-container .form-fields,  .search .form-row {
+	width: 1000px !important;
+}
+
